--- a/configs/config.json
+++ b/configs/config.json
@@ -7,8 +7,8 @@
         "rou_file": "data/input/sumo/test-demo.rou.xml",
         "add_file": null,
         "begin": 0,
-        "end": 1200,
-        "gui": true,
+        "end": 200,
+        "gui": false,
         "step_length": 0.1,
         "steps_delay": 100,
         "lateral_resolution": 0.1
@@ -33,18 +33,18 @@
     },
     "pbil": 
     {
-        "Gmax": 3,
+        "Gmax": 10,
         "population": 10,
-        "lr_pos": 0.2,
-        "lr_neg": 0.05,
-        "mutation_rate": 0.1,
+        "lr_pos": 0.01,
+        "lr_neg": 0.075,
+        "mutation_rate": 0.02,
         "mutation_step": 0.05,
         "prob_min": 0.05,
         "prob_max": 0.95,
-        "convergence_eps": 0.0001,
+        "convergence_eps": 0.002,
         "N_max": null,
         "exploit_prob": 0.5,
-        "sample_interval": 7.0,
+        "sample_interval": 10.0,
         "evaluation": "total_vehicle",
         "random_seed": 123
     },
