--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ run-custom = "choose_atsc_pbil.cli.run_custom:main"
 run-pbil = "choose_atsc_pbil.cli.run_pbil:main"
 run_pbil_multiprocess = "choose_atsc_pbil.cli.run_pbil_multiprocess:main"
 build-net-info = "choose_atsc_pbil.cli.build_net_info:main"
+build-tls-candidates = "choose_atsc_pbil.cli.build_tls_candidates:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
