--- a/configs/config.json
+++ b/configs/config.json
@@ -1,17 +1,17 @@
 {
     "sumo": 
     {
-        "runner": "libsumo",
-        "sumocfg": "data/input/sumo/PhuQuoc_v2/phuquoc.sumocfg",
-        "net_file": "data/input/sumo/PhuQuoc_v2/phuquoc.net.xml",
-        "rou_file": "data/input/sumo/PhuQuoc_v2/phuquoc-demo.rou.xml",
-        "detectors_file": "data/input/sumo/PhuQuoc_v2/e2.add.xml",
-        "net_info_file": "data/input/sumo/PhuQuoc_v2/net-info.json",
-        "candidates_file": "data/input/sumo/PhuQuoc_v2/tls-candidates.json",
+        "runner": "traci",
+        "sumocfg": "data/input/sumo/PhuQuoc_v3/phuquoc.sumocfg",
+        "net_file": "data/input/sumo/PhuQuoc_v3/phuquoc.net.xml",
+        "rou_file": "data/input/sumo/PhuQuoc_v3/phuquoc-demo.rou.xml",
+        "detectors_file": "data/input/sumo/PhuQuoc_v3/e2.add.xml",
+        "net_info_file": "data/input/sumo/PhuQuoc_v3/net-info.json",
+        "candidates_file": "data/input/sumo/PhuQuoc_v3/tls-candidates.json",
         "begin": 0,
-        "end": 1400,
-        "gui": false,
-        "step_length": 0.1,
+        "end": 3600,
+        "gui": true,
+        "step_length": 1,
         "steps_delay": 100,
         "lateral_resolution": 0.1
     },
@@ -43,7 +43,7 @@
         "mutation_step": 0.05,
         "prob_min": 0.05,
         "prob_max": 0.95,
-        "convergence_eps": 0.002,
+        "convergence_eps": 0.0005,
         "N_max": null,
         "exploit_prob": 0.5,
         "sample_interval": 10.0,
@@ -55,7 +55,7 @@
         "stdout": true,
         "save_every_gen": true
     },
-    "evaluations": ["summary-output", "queue-output"],
+    "evaluations": ["summary-output", "statistic-output", "tripinfo-output", "emission-output"],
     "system": {
         "max_processes": 15
     }
