--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ networkx = ">=3.5,<4.0"
 numpy = ">=2.3.2,<3.0.0"
 matplotlib = "^3.10.5"
 ipykernel = "^6.30.1"
+pandas = "^2.3.1"
 
 [tool.poetry.scripts]
 run-custom = "choose_atsc_pbil.cli.run_custom:main"
